add yae 3dmigoto mod

--- a/Mods/3Dmigoto/Mods (nsfw)/Yae/YaeMod/Yae.ini
+++ b/Mods/3Dmigoto/Mods (nsfw)/Yae/YaeMod/Yae.ini
@@ -9,6 +9,8 @@ vb0 = ResourceYaePosition
 [TextureOverrideYaeBlend]
 hash = d9ee433a
 vb1 = ResourceYaeBlend
+handling = skip
+draw = 17731,0 
 
 [TextureOverrideYaeTexcoord]
 hash = 4aebeee0
@@ -16,23 +18,27 @@ vb1 = ResourceYaeTexcoord
 
 [TextureOverrideYaeIB]
 hash = 65ddc0df
-ib = ResourceYaeIB
+handling = skip
+drawindexed = auto
 
 [TextureOverrideYaeHead]
 hash = 65ddc0df
 match_first_index = 0
+ib = ResourceYaeHeadIB
 ps-t0 = ResourceYaeHeadDiffuse
 ps-t1 = ResourceYaeHeadLightMap
 
 [TextureOverrideYaeBody]
 hash = 65ddc0df
 match_first_index = 19968
+ib = ResourceYaeBodyIB
 ps-t0 = ResourceYaeBodyDiffuse
 ps-t1 = ResourceYaeBodyLightMap
 
 [TextureOverrideYaeExtra]
 hash = 65ddc0df
 match_first_index = 62868
+ib = ResourceYaeExtraIB
 ps-t0 = ResourceYaeExtraDiffuse
 ps-t1 = ResourceYaeExtraLightMap
 
@@ -40,23 +46,33 @@ ps-t1 = ResourceYaeExtraLightMap
 
 [ResourceYaePosition]
 type = Buffer
-Stride = 40
+stride = 40
 filename = YaePosition.buf
 
 [ResourceYaeBlend]
 type = Buffer
-Stride = 32
+stride = 32
 filename = YaeBlend.buf
 
 [ResourceYaeTexcoord]
 type = Buffer
-Stride = 20
+stride = 20
 filename = YaeTexcoord.buf
 
-[ResourceYaeIB]
+[ResourceYaeHeadIB]
 type = Buffer
-Format = DXGI_FORMAT_R16_UINT
-filename = Yae.ib
+format = DXGI_FORMAT_R16_UINT
+filename = YaeHead.ib
+
+[ResourceYaeBodyIB]
+type = Buffer
+format = DXGI_FORMAT_R16_UINT
+filename = YaeBody.ib
+
+[ResourceYaeExtraIB]
+type = Buffer
+format = DXGI_FORMAT_R16_UINT
+filename = YaeExtra.ib
 
 [ResourceYaeHeadDiffuse]
 filename = YaeHeadDiffuse.dds
